// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reformed HOC merges and overrides input flags correctly 1`] = `
<form>
  <span
    active={true}
    dirty={false}
  />
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <span />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC merges and overrides input flags correctly 2`] = `
<form>
  <span
    active={true}
    dirty={true}
  />
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="test"
  />
  <span />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC merges and overrides input flags correctly 3`] = `
<form>
  <span
    active={false}
    dirty={true}
    touched={true}
  />
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="test"
  />
  <span />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC removes active flag and set touched flag on blur 1`] = `
<form>
  <span
    active={false}
    dirty={false}
    touched={true}
  />
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <span />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span
    active={false}
    dirty={false}
    touched={true}
  />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC sets active flag on focus 1`] = `
<form>
  <span
    active={true}
    dirty={false}
  />
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <span />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span
    active={true}
    dirty={false}
  />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC sets dirty flag in fields 1`] = `
<form>
  <span />
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <span />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC sets dirty flag in fields 2`] = `
<form>
  <span
    dirty={true}
  />
  <input
    checked={undefined}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Hombre"
  />
  <span />
  <input
    checked={undefined}
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    checked={undefined}
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span
    dirty={true}
  />
  <input
    checked={undefined}
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="El Grande"
  />
</form>
`;
